--- a/front-end/src/pages/ClaimPage.scss
+++ b/front-end/src/pages/ClaimPage.scss
@@ -71,6 +71,9 @@
 .vehicle-grid {
     margin-top: 10px;
     padding: 0 !important;
+    border: 1px solid lightgrey;
+    border-radius:3px;
+    box-shadow: 0 2px 2px lightgrey !important;
 }
 
 .grid-container {
@@ -338,10 +341,7 @@
 .map-container {
     position: relative;
     font-size: 15px;
-    //border: 1px solid #008080;
     padding:10px;
-    //border-radius:3px;
-    //box-shadow: 0 2px 3px #008080 !important; 
 }
 .map-button {
     background-color: green !important;
